# State-Mode-Logic-Analyzer

./: .gitignore  LICENSE.md  README.md
firmware/circuitpython/: i2c_control_for_clock_delay_code.py
firmware/clkdly/clkdly/: CMakeLists.txt  clkdly.c  piodelay.pio  piosampler.pio  piotimestamps.pio
firmware/pico/: CMakeLists.txt  README.md  pico.c  smla.pio
kicad/: state mode logic analyzer.kicad_pcb  state mode logic analyzer.kicad_pro  state mode logic analyzer.kicad_sch  state mode logic analyzer.round-tracks-config  ~state mode logic analyzer.kicad_sch.lck
kicad/bom/: ibom.html
kicad/dac_test_board/: dac_test_board.kicad_pcb  dac_test_board.kicad_pro  dac_test_board.kicad_sch
kicad/rp2040/: state mode logic analyzer.kicad_pro  sym-lib-table
kicad/rp2040/gerbs/: state mode logic analyzer-B_Cu.gbr  state mode logic analyzer-B_Mask.gbr  state mode logic analyzer-B_Paste.gbr  state mode logic analyzer-B_Silkscreen.gbr  state mode logic analyzer-Edge_Cuts.gbr  state mode logic analyzer-F_Cu.gbr  state mode logic analyzer-F_Mask.gbr  state mode logic analyzer-F_Paste.gbr  state mode logic analyzer-F_Silkscreen.gbr  state mode logic analyzer-In1_Cu.gbr  state mode logic analyzer-In2_Cu.gbr  state mode logic analyzer-NPTH.drl  state mode logic analyzer-PTH.drl  state mode logic analyzer-job.gbrjob
kicad/rp2350/: state mode logic analyzer rp2350.kicad_pcb  state mode logic analyzer rp2350.kicad_pro  state mode logic analyzer rp2350.kicad_sch
waveforms/: 01 - simple pattern gen.dwf3work  02 - with altair panel.dwf3work  03 - proper binary counter.dwf3work  10 - clock delay stuff.dwf3work  11 - delay with pio measurements.dwf3work
